--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -27,8 +27,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          ls
-          pip install -r requirments.txt
+          pip install -r requirements.txt
       
       - name: Run tests
         env:
