--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,5 +7,7 @@ services:
     command: python manage.py runserver 0.0.0.0:8000
     ports:
       - 8100:8000
+    volumes:
+      - ./:/usr/src/app
     env_file:
       - .env
